Set up link for viewing a file directly.

--- a/static/style.css
+++ b/static/style.css
@@ -9,3 +9,13 @@
 .filelist a:hover {
 	cursor: pointer;
 }
+
+#viewsubfile {
+	border-bottom: 2px dashed black;
+	text-decoration: none;
+	font-size: 150%;
+}
+
+#viewsubfile:hover {
+	border-bottom: 2px dotted black;
+}
